# OmoTemmyWallet

./: .env  main.py  manage.py  pyproject.toml
QuickPay/: asgi.py  settings.py  urls.py  wsgi.py
notification/: models.py  services.py
notification/migrations/: 0001_initial.py  0002_initial.py  0003_alter_notification_event_type.py  0004_remove_notification_event_type.py  0005_notification_event_type.py  0006_remove_notification_user.py  0007_notification_is_read_notification_message_and_more.py
omotemmypay/: asgi.py  settings.py  urls.py  wsgi.py
services/: onboarding_service.py
user/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py
wallet/: models.py  seraializers.py  urls.py  util.py  views.py
wallet/migrations/: 0001_initial.py  0002_alter_wallet_account_number.py  0003_alter_wallet_account_number.py  0004_alter_wallet_account_number.py  0004_remove_wallet_amount_alter_wallet_account_number.py  0005_alter_wallet_account_number.py  0006_alter_wallet_account_number.py
wallet/services/: intra_transfer.py  register_wallet.py
